--- a/.github/workflows/merge-main.yml
+++ b/.github/workflows/merge-main.yml
@@ -44,22 +44,23 @@ jobs:
           # Get the base commit of the PR (the commit where it diverged from the main branch)
           BASE_COMMIT=$(git merge-base HEAD^ origin/main)
 
-          # Get the commits introduced by this PR
+          # Get all commits from this PR in reverse order
           COMMITS=$(git rev-list --reverse $BASE_COMMIT..HEAD)
 
-          # Extract the first and last commits
+          # Get first and last commits to ensure we capture the full range
           FIRST_COMMIT=$(echo "$COMMITS" | head -n 1)
           LATEST_COMMIT=$(echo "$COMMITS" | tail -n 1)
 
-          # Set outputs for later steps
+          # Set outputs and log for verification
           echo "base_commit=$BASE_COMMIT" >> $GITHUB_OUTPUT
           echo "first_commit=$FIRST_COMMIT" >> $GITHUB_OUTPUT
           echo "latest_commit=$LATEST_COMMIT" >> $GITHUB_OUTPUT
-
-          # Log for debugging
+        
+          # Debug output
+          echo "Number of commits in PR: $(echo "$COMMITS" | wc -l)"
           echo "Base Commit: $BASE_COMMIT"
-          echo "First Commit in PR: $FIRST_COMMIT"
-          echo "Latest Commit in PR: $LATEST_COMMIT"
+          echo "First Commit: $FIRST_COMMIT"
+          echo "Latest Commit: $LATEST_COMMIT"
 
       - name: Get Latest Feluda Tag
         id: latest-tag
@@ -111,65 +112,91 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      # rough logic for generating custom changelog's
-      # - name: Generate Release Notes and Update Changelog
-      #   if: steps.push-changes.outputs.tag_created == 'true'
-      #   id: release-notes
-      #   run: |
-      #     # Get the previous feluda tag
-      #     PREV_TAG=$(git tag -l "feluda-[0-9]*" | sort -V | grep -B1 "${{ steps.push-changes.outputs.new_tag }}" | head -n1)
-      #     echo "Prev feluda tag: $PREV_TAG"
-      #     echo "New feluda tag: ${{ steps.push-changes.outputs.new_tag }}"
+      - name: Generate Release Notes and Update Changelog
+        id: release-notes
+        run: |
+          # Configure Git
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "GitHub Actions [Bot]"
 
-      #     # Create release notes file with header
-      #     echo "# Release ${{ steps.push-changes.outputs.new_tag }}" > release_notes.md
-      #     echo "" >> release_notes.md
+          # Get commit range using environment variables
+          BASE_COMMIT="${{ steps.commit-range.outputs.base_commit }}"
+          LATEST_COMMIT="${{ steps.commit-range.outputs.latest_commit }}"
+        
+          echo "Base commit: $BASE_COMMIT"
+          echo "Latest commit: $LATEST_COMMIT"
 
-      #     # Function to add section if commits exist
-      #     add_section() {
-      #       local title="$1"
-      #       local pattern="$2"
-      #       local commits=$(git log "${PREV_TAG}^..${{ steps.push-changes.outputs.new_tag }}" --pretty=format:"* %s (%h)" | grep "^* $pattern" || true)
-      #       if [ ! -z "$commits" ]; then
-      #         echo "## $title" >> release_notes.md
-      #         echo "$commits" >> release_notes.md
-      #         echo "" >> release_notes.md
-      #       fi
-      #     }
+          # Get all commits from the PR affecting feluda/
+          FELUDA_COMMITS=$(git log "${BASE_COMMIT}..${LATEST_COMMIT}" --pretty=format:"* %s (%h)" --no-merges -- feluda/)
+          echo "Feluda commits:"
+          echo "$FELUDA_COMMITS"
 
-      #     # Add sections only if they have commits
-      #     add_section "Features" "feat"
-      #     add_section "Bug Fixes" "fix"
-      #     add_section "Chores" "chore"
-      #     add_section "Documentation" "docs"
+          # Skip if no commits affecting feluda/
+          if [ -z "$FELUDA_COMMITS" ]; then
+            echo "No changes detected for feluda/. Skipping changelog update."
+            exit 0
+          fi
 
-      #     # Add miscellaneous section for other commits
-      #     misc_commits=$(git log "${PREV_TAG}^..${{ steps.push-changes.outputs.new_tag }}" --pretty=format:"* %s (%h)" |
-      #       grep -v "^* feat" |
-      #       grep -v "^* fix" |
-      #       grep -v "^* chore" |
-      #       grep -v "^* docs" || true)
+          # Create release notes file with header
+          echo "# Release Notes" > release_notes.md
+          echo "" >> release_notes.md
 
-      #     if [ ! -z "$misc_commits" ]; then
-      #       echo "## Miscellaneous" >> release_notes.md
-      #       echo "$misc_commits" >> release_notes.md
-      #       echo "" >> release_notes.md
-      #     fi
+          # Function to add section if commits exist
+          add_section() {
+            local title="$1"
+            local pattern="$2"
+            local commits=$(echo "$FELUDA_COMMITS" | grep "^* $pattern" || true)
+            if [ ! -z "$commits" ]; then
+              echo "## $title" >> release_notes.md
+              echo "$commits" >> release_notes.md
+              echo "" >> release_notes.md
+            fi
+          }
 
-      #     # Update CHANGELOG.md
-      #     if [ -f CHANGELOG.md ]; then
-      #       cat release_notes.md > temp_changelog
-      #       echo "" >> temp_changelog
-      #       cat CHANGELOG.md >> temp_changelog
-      #       mv temp_changelog CHANGELOG.md
-      #     else
-      #       cat release_notes.md > CHANGELOG.md
-      #     fi
+          # Add sections only if they have commits
+          add_section "Features" "feat"
+          add_section "Bug Fixes" "fix"
+          add_section "Chores" "chore"
+          add_section "Documentation" "docs"
 
-      #     # Commit the updated CHANGELOG
-      #     git add CHANGELOG.md
-      #     git commit -m "docs: update CHANGELOG.md for ${{ steps.push-changes.outputs.new_tag }}"
-      #     git push
+          # Add miscellaneous section for other commits
+          misc_commits=$(echo "$FELUDA_COMMITS" |
+            grep -v "^* feat" |
+            grep -v "^* fix" |
+            grep -v "^* chore" |
+            grep -v "^* docs" || true)
 
-     
+          if [ ! -z "$misc_commits" ]; then
+            echo "## Miscellaneous" >> release_notes.md
+            echo "$misc_commits" >> release_notes.md
+            echo "" >> release_notes.md
+          fi
 
+          # Add contributors section
+          contributors=$(git log "${BASE_COMMIT}..${LATEST_COMMIT}" --pretty=format:"%an" --no-merges -- feluda/ | sort -u)
+          if [ ! -z "$contributors" ]; then
+            echo "## Contributors" >> release_notes.md
+            echo "$contributors" | sed 's/^/* /' >> release_notes.md
+            echo "" >> release_notes.md
+          fi
+
+          # Ensure CHANGELOG.md exists
+          touch CHANGELOG.md
+
+          # Update CHANGELOG.md
+          cat release_notes.md > temp_changelog
+          echo "" >> temp_changelog
+          cat CHANGELOG.md >> temp_changelog
+          mv temp_changelog CHANGELOG.md
+
+          # Show content for debugging
+          echo "Generated release notes:"
+          cat release_notes.md
+        
+          echo "Updated CHANGELOG.md:"
+          cat CHANGELOG.md
+
+          # Commit and push the updated CHANGELOG
+          git add CHANGELOG.md
+          git commit -m "docs: update CHANGELOG.md [skip ci]" || true
+          git push || true
