--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.9.2"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
-    "boto3>=1.37.29",
+    "boto3>=1.37.30",
     "dacite>=1.9.2",
     "pydub>=0.25.1",
     "pyyaml>=6.0.2",
@@ -20,18 +20,16 @@ dev = [
     "tomlkit>=0.13.2",
     "ruff>=0.11.4",
     "pre-commit>=4.2.0",
+    "jupyter>=1.1.1",
+    "notebook>=7.3.3",
 ]
 
 [build-system]
-requires = [
-    "hatchling",
-]
+requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.semantic_release]
-version_variable = [
-    "pyproject.toml:project.version",
-]
+version_variable = ["pyproject.toml:project.version"]
 
 [tool.semantic_release.branches.main]
 match = "main"
@@ -47,15 +45,7 @@ members = [
 ]
 
 [tool.ruff]
-exclude = [
-    "src",
-    "dist",
-    ".docker",
-    ".pytest_cache",
-    ".ruff_cache",
-]
+exclude = ["src", "dist", ".docker", ".pytest_cache", ".ruff_cache"]
 
 [tool.hatch.build.targets.wheel]
-packages = [
-    "feluda",
-]
+packages = ["feluda"]
