--- a/operators/dimension_reduction/pyproject.toml
+++ b/operators/dimension_reduction/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "feluda-dimension-reduction"
+name = "feluda-cluster-embeddings"
 version = "0.1.3"
 requires-python = ">=3.10"
 dependencies = ["scikit-learn>=1.6.1", "numpy>=2.2.4"]
@@ -18,3 +18,23 @@ tag_format = "{name}-{version}"
 
 [tool.hatch.build.targets.wheel]
 packages = ["."]
+
+[tool.deptry]
+package_module_name_map.torch = "torch"
+package_module_name_map.torchvision = "torchvision"
+package_module_name_map.numpy = "numpy"
+package_module_name_map.pillow = "PIL"
+
+# Ignore custom packages and internal imports
+known_first_party = [
+    "feluda",
+    "operators",
+    "feluda.*",
+    "operators.*"
+]
+
+# Exclude irrelevant dependencies from unused checks
+ignore = ["DEP002"]
+
+# Exclude test and documentation directories
+exclude = ["src", "tests", "examples"]
