--- a/operators/classify_video_zero_shot/pyproject.toml
+++ b/operators/classify_video_zero_shot/pyproject.toml
@@ -1,8 +1,8 @@
 [project]
-name = "feluda-classify_video_zero_shot"
-version = "0.1.3"
+name = "feluda-classify-video-zero-shot"
+version = "0.0.0"
 requires-python = ">=3.10"
-dependencies = ["torch==2.4.0", "pillow==10.4.0", "transformers==4.44.0"]
+dependencies = ["torch>=2.6.0", "pillow>=11.1.0", "transformers>=4.51.1"]
 
 [build-system]
 requires = ["hatchling"]
