--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,34 @@
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
 [project]
 name = "feluda"
 version = "0.9.3"
+description = "A Python library for media processing and analysis"
 readme = "README.md"
 requires-python = ">=3.10"
+license = { text = "MIT" }
+authors = [{ name = "Feluda Team", email = "team@feluda.org" }]
+maintainers = [{ name = "Feluda Maintainers", email = "maintainers@feluda.org" }]
+keywords = ["media", "processing", "analysis", "machine-learning", "ai"]
+classifiers = [
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "License :: OSI Approved :: MIT License",
+    "Operating System :: OS Independent",
+    "Development Status :: 4 - Beta",
+    "Intended Audience :: Developers",
+    "Topic :: Software Development :: Libraries :: Python Modules"
+]
+urls = { 
+    "Homepage" = "https://github.com/feluda/feluda",
+    "Documentation" = "https://feluda.readthedocs.io",
+    "Repository" = "https://github.com/feluda/feluda.git",
+    "Issues" = "https://github.com/feluda/feluda/issues"
+}
+
 dependencies = [
     "boto3>=1.37.30",
     "dacite>=1.9.2",
@@ -22,19 +48,25 @@ dev = [
     "pre-commit>=4.2.0",
     "jupyter>=1.1.1",
     "notebook>=7.3.3",
+    "pytest>=7.0.0",
+    "black>=23.0.0",
+]
+docs = [
+    "sphinx>=7.0.0",
+    "sphinx-rtd-theme>=1.0.0",
 ]
 
-[build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
+[tool.hatch.build]
+include = ["feluda"]
+exclude = ["tests/*", "docs/*"]
 
-[tool.semantic_release]
-version_variable = ["pyproject.toml:project.version"]
+[tool.hatch.build.targets.wheel]
+packages = ["feluda"]
 
-[tool.semantic_release.branches.main]
-match = "main"
-prerelease = false
-tag_format = "{name}-{version}"
+[tool.uv]
+python = "3.10"
+concurrent-installs = 4
+config-settings = { editable_mode = "compat" }
 
 [tool.uv.workspace]
 members = [
@@ -45,7 +77,15 @@ members = [
 ]
 
 [tool.ruff]
+line-length = 88
+target-version = "py310"
+select = ["E", "F", "I"]
 exclude = ["src", "dist", ".docker", ".pytest_cache", ".ruff_cache"]
 
-[tool.hatch.build.targets.wheel]
-packages = ["feluda"]
+[tool.semantic_release]
+version_variable = ["pyproject.toml:project.version"]
+
+[tool.semantic_release.branches.main]
+match = "main"
+prerelease = false
+tag_format = "{name}-{version}"
