--- a/operators/detect_lewd_images/pyproject.toml
+++ b/operators/detect_lewd_images/pyproject.toml
@@ -1,8 +1,8 @@
 [project]
-name = "feluda-classify-video-zero-shot"
+name = "feluda-detect-lewd-image"
 version = "0.0.0"
 requires-python = ">=3.10"
-dependencies = ["huggingface-hub==0.30.2", "tensorflow==2.19.0"]
+dependencies = ["huggingface-hub>=0.30.2", "tensorflow>=2.19.0"]
 
 [build-system]
 requires = ["hatchling"]
