--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,30 +1,11 @@
-[build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
-
 [project]
 name = "feluda"
 version = "0.9.3"
-description = "A Python library for media processing and analysis"
+description = "A configurable engine for analysing multi-lingual and multi-modal content."
 readme = "README.md"
 requires-python = ">=3.10"
-include = ["LICENSE.md"]
-authors = [{ name = "Feluda Team", email = "team@feluda.org" }]
-maintainers = [{ name = "Feluda Maintainers", email = "maintainers@feluda.org" }]
-keywords = ["media", "processing", "analysis", "machine-learning", "ai"]
-classifiers = [
-    "Programming Language :: Python :: 3.10",
-    "License :: OSI Approved :: MIT License",
-    "Operating System :: OS Independent",
-    "Intended Audience :: Developers",
-    "Topic :: Software Development :: Libraries :: Python Modules"
-]
-
-urls = { 
-    "Homepage" = "https://github.com/feluda/feluda",
-    "Repository" = "https://github.com/feluda/feluda.git",
-    "Issues" = "https://github.com/feluda/feluda/issues" }
-
+license = {file = "LICENSE.md"}
+keywords = ["multilingual", "multimodal", "indian-languages", "search", "deep-learning"]
 dependencies = [
     "boto3>=1.37.30",
     "dacite>=1.9.2",
@@ -46,47 +27,30 @@ dev = [
     "notebook>=7.3.3",
 ]
 
-[tool.hatch.build]
-include = ["feluda"]
-
-[tool.hatch.build.targets.wheel]
-packages = ["feluda"]
-
-[tool.uv]
-python = "3.10"
-concurrent-installs = 4
-config-settings = { editable_mode = "compat" }
-
-[tool.uv.workspace]
-members = [
-    "feluda"
-    "operators/image_vec_rep_resnet",
-    "operators/vid_vec_rep_clip",
-    "operators/cluster_embeddings",
-    "operators/dimension_reduction",
-]
-
-[tool.uv.dev-dependencies]
-lint = ["ruff"]
-docs = ["sphinx", "sphinx-rtd-theme"]
-
-[tool.ruff]
-line-length = 88
-target-version = "py310"
-select = [
-  "E",    # pycodestyle
-  "F",    # pyflakes
-  "I",    # isort
-  "B",    # flake8-bugbear
-  "UP",   # pyupgrade
-  "C4",   # flake8-comprehensions
-  "SIM",  # flake8-simplify
-]
-exclude = ["src", "dist", ".docker", ".pytest_cache", ".ruff_cache"]
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
 [tool.semantic_release]
 version_variable = ["pyproject.toml:project.version"]
 
 [tool.semantic_release.branches.main]
 match = "main"
+prerelease = false
 tag_format = "{name}-{version}"
+
+[tool.uv.workspace]
+members = [
+    "operators/image_vec_rep_resnet",
+    "operators/vid_vec_rep_clip",
+    "operators/cluster_embeddings",
+    "operators/dimension_reduction",
+]
+
+[tool.ruff]
+target-version = "py310"
+line-length = 88
+exclude = ["src", "dist", ".docker", ".pytest_cache", ".ruff_cache"]
+
+[tool.ruff.pydocstyle]
+convention = "google"
