chore: adding build wheel

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,5 +52,8 @@ target-version = "py310"
 line-length = 88
 exclude = ["src", "dist", ".docker", ".pytest_cache", ".ruff_cache"]
 
+[tool.hatch.build.targets.wheel]
+packages = ["feluda"]
+
 [tool.ruff.pydocstyle]
 convention = "google"
