--- a/operators/cluster_embeddings/pyproject.toml
+++ b/operators/cluster_embeddings/pyproject.toml
@@ -2,7 +2,7 @@
 name = "feluda-cluster-embeddings"
 version = "0.1.3"
 requires-python = ">=3.10"
-dependencies = ["scikit-learn>=1.6.1", "numpy>=2.2.4"]
+dependencies = ["scikit-learn>=1.6.1", "numpy>=1.26,<2.2.0"]
 
 [build-system]
 requires = ["hatchling"]
