--- a/operators/dimension_reduction/pyproject.toml
+++ b/operators/dimension_reduction/pyproject.toml
@@ -2,7 +2,11 @@
 name = "feluda-dimension-reduction"
 version = "0.1.3"
 requires-python = ">=3.10"
-dependencies = ["scikit-learn>=1.6.1", "numpy>=2.2.4", "umap-learn>=0.5.0"]
+dependencies = [
+    "scikit-learn>=1.6.1",
+    "numpy>=1.26,<2.2.0",
+    "umap-learn>=0.5.0",
+]
 
 [build-system]
 requires = ["hatchling"]
