--- a/operators/image_vec_rep_resnet/pyproject.toml
+++ b/operators/image_vec_rep_resnet/pyproject.toml
@@ -5,7 +5,7 @@ requires-python = ">=3.10"
 dependencies = [
     "torch>=2.6.0",
     "torchvision>=0.21.0",
-    "numpy>=2.2.4",
+    "numpy>=1.26,<2.2.0",
     "pillow>=11.1.0",
 ]
 
