--- a/.github/workflows/operator-test.yml
+++ b/.github/workflows/operator-test.yml
@@ -64,6 +64,7 @@ jobs:
           echo "Installing ffmpeg and tesseract-ocr..."
           sudo apt-get update > /dev/null
           sudo apt-get install -y ffmpeg tesseract-ocr > /dev/null
+          sudo apt-get install -y tesseract-ocr tesseract-ocr-hin tesseract-ocr-tam tesseract-ocr-tel > /dev/null
           echo "ffmpeg version:"
           ffmpeg -version
           echo "tesseract version:"
