chore: updates to feluda pyproject.toml file (#628)
* Update pyproject.toml

* Update pyproject.toml

* Update pyproject.toml

* Update pyproject.toml

* chore: updates to feluda pyproject.toml file

* chore: remove minor comment

* chore: minor changes

---------

Co-authored-by: Aatman Vaidya <aatmanvaidya@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,10 @@ version = "0.9.4"
 description = "A configurable engine for analysing multi-lingual and multi-modal content."
 readme = "README.md"
 requires-python = ">=3.10"
+
+authors = [{ name = "Tattle Admin", email = "admin@tattle.co.in" }]
+maintainers = [{ name = "Tattle Admin", email = "admin@tattle.co.in" }]
+
 license = { file = "LICENSE.md" }
 keywords = [
     "multilingual",
@@ -12,26 +16,62 @@ keywords = [
     "search",
     "deep-learning",
 ]
+
+classifiers = [
+    "Intended Audience :: Science/Research",
+    "Intended Audience :: Developers",
+    "Operating System :: OS Independent",
+    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
+    "Programming Language :: Python :: 3 :: Only",
+    "Programming Language :: Python :: 3.10",
+    "Topic :: Scientific/Engineering :: Artificial Intelligence",
+    "Topic :: Text Processing :: Linguistic",
+    "Topic :: Multimedia :: Video",
+    "Topic :: Multimedia :: Sound/Audio",
+    "Topic :: Software Development :: Libraries :: Python Modules",
+]
+
 dependencies = [
+    # interact with AWS from Python
     "boto3>=1.37.30",
+    # convert dictionaries into dataclass
     "dacite>=1.9.2",
+    # for audio processing
     "pydub>=0.25.1",
+    # load/save config files in a readable format
     "pyyaml>=6.0.2",
+    # to send HTTP requests and handle responses
     "requests>=2.32.3",
-    "werkzeug>=3.1.3",
+    # for request/responses and routing
+    "werkzeug>=3.0.3",
+    # download files using a URL
     "wget>=3.2",
+    # for image processing
     "pillow>=11.1.0",
+    # numpy is set to >=1.26,<2.2.0 to maintain compatibility with TensorFlow
+    # versions >=2.2.0 may lead to conflicts
     "numpy>=1.26,<2.2.0",
 ]
 
+# deps that are optional
 [project.optional-dependencies]
 dev = [
+    # for reading, editing pyproject.toml files
     "tomlkit>=0.13.2",
+    # code linter and formatter
     "ruff>=0.11.4",
+    # runs checks before each git commits
     "pre-commit>=4.2.0",
+    # for Jupyter support and interface
     "jupyter>=1.1.1",
     "notebook>=7.3.3",
 ]
+
+[project.urls]
+Homepage = "https://tattle.co.in/products/feluda/"
+Repository = "https://github.com/tattle-made/feluda"
+Issues = "https://github.com/tattle-made/feluda/issues"
+Changelog = "https://github.com/tattle-made/feluda/blob/main/CHANGELOG.md"
 
 [build-system]
 requires = ["hatchling"]
