--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,10 +27,11 @@ dependencies = [
 [project.optional-dependencies]
 dev = [
     "tomlkit>=0.13.2",
-    "ruff>=0.11.4",
+    "ruff>=0.11.13",
     "pre-commit>=4.2.0",
     "jupyter>=1.1.1",
     "notebook>=7.3.3",
+    "pytest>=8.3.2",
 ]
 
 [build-system]
@@ -61,6 +62,9 @@ members = [
 target-version = "py310"
 line-length = 88
 exclude = ["src", "dist", ".docker", ".pytest_cache", ".ruff_cache"]
+
+[tool.ruff.per-file-ignores]
+"operators/*/test.py" = ["ANN"]
 
 [tool.hatch.build.targets.wheel]
 packages = ["feluda"]
