--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,7 @@ dev = [
     # for Jupyter support and interface
     "jupyter>=1.1.1",
     "notebook>=7.3.3",
+    "pytest>=8.3.2",
 ]
 audio = [
     "pydub>=0.25.1",
