--- a/.github/workflows/pr-tests.yml
+++ b/.github/workflows/pr-tests.yml
@@ -37,6 +37,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install .
+          pip install ".[dev]"
 
       - name: Run all Feluda Unit Tests
         run: |
