--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,9 +47,9 @@ dev = [
     "notebook>=7.3.3",
     "pytest>=8.3.2",
 ]
-audio = ["pydub>=0.25.1", "wget>=3.2"]
+audio = ["pydub>=0.25.1", "wget>=3.2", "boto3>=1.38.42"]
 
-video = ["wget>=3.2", "werkzeug>=3.1.3"]
+video = ["wget>=3.2", "werkzeug>=3.1.3", "boto3>=1.38.42"]
 
 image = [
     "numpy>=1.26,<2.2.0",
@@ -57,11 +57,10 @@ image = [
     "wget>=3.2",
     "requests>=2.32.3",
     "werkzeug>=3.1.3",
+    "boto3>=1.38.42"
 ]
 
-s3 = ["boto3"]
-
-all = ["feluda[audio,video,image,s3]"]
+all = ["feluda[audio,video,image]"]
 
 [project.urls]
 Homepage = "https://tattle.co.in/products/feluda/"
