feat: refactor feluda core to support new API (#639)
* refactor feluda core

* refactor media factory

* refactor pyproject.toml

* assertions

* pre-commit fixes

* media factory tests

* change factory imports

* refactor `pyproject.toml` again

* ci: fix pr tests action

* chore: revert the pyproject.toml file

* chore: fix feluda install in tests action

* chore: fix feluda install in tests action

---------

Co-authored-by: Aatman Vaidya <aatmanvaidya@gmail.com>

--- a/.github/workflows/operator-test.yml
+++ b/.github/workflows/operator-test.yml
@@ -57,7 +57,7 @@ jobs:
         run: |
           uv venv
           source .venv/bin/activate
-          uv pip install .
+          uv pip install ".[all]"
           uv pip install ".[dev]"
 
           echo "Installing Operator system level packages"
