refactor: ideo_hash_tmk operator

--- a/operators/video_hash_tmk/pyproject.toml
+++ b/operators/video_hash_tmk/pyproject.toml
@@ -1,9 +1,9 @@
 [project]
 name = "feluda-video-hash-tmk"
 version = "0.1.0"
-description = "A Feluda operator for generating video perceptual hashes using TMK+PDQF."
+description = "A Feluda operator for generating video perceptual hashes using TMK+PDQF algorithm"
 requires-python = ">=3.10"
-dependencies = ["ffmpeg-python>=0.2.0", "wget>=3.2"]
+dependencies = ["ffmpeg-python>=0.2.0", "wget>=3.2", "feluda[video]"]
 
 [build-system]
 requires = ["hatchling"]
