fix: remove weekly cron

--- a/.github/workflows/benchmarks.yml
+++ b/.github/workflows/benchmarks.yml
@@ -1,8 +1,6 @@
-name: Weekly Benchmarks
+name: Benchmarks
 
 on:
-  schedule:
-    - cron: '0 2 * * 0'  # Every Sunday at 2 AM UTC
   workflow_dispatch:      # Manual trigger
 
 jobs:
